...
                android:padding="10dp"
                android:text="Ingredients"
                android:textSize="17dp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredient_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:padding="10dp"/>

        </LinearLayout>
...
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/steps_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    />

            </android.support.v7.widget.CardView>
...
