<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.v4.widget.ContentLoadingProgressBar android:id="@+id/progressBar"
    android:layout_width="50dp"
    android:layout_height="50dp"
    style="?android:progressBarStyle"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    xmlns:android="http://schemas.android.com/apk/res/android" />
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </FrameLayout>
</android.support.v4.widget.NestedScrollView>
</RelativeLayout>