...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/step_details_frame_layout">


            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/exo_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cardview_dark_background" />

            <ImageView
                android:id="@+id/exo_player_thumbnail_image"
...
